k8s/base/quiz-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quizapp-service
spec:
  selector:
    app: quizapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000  # should match containerPort in deployment.yaml
  type: ClusterIP
