k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quizapp-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: wildcard-ssl-cert  # This line is key
    appgw.ingress.kubernetes.io/probe-path: /health
    appgw.ingress.kubernetes.io/probe-port: "8000"
    # appgw.ingress.kubernetes.io/use-private-ip: "false"  # Optional
    # appgw.ingress.kubernetes.io/backend-path-prefix: "/" # Optional, depending on your path
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: www.neotechwave.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quizapp-service
            port:
              number: 80
