k8s/base/quizapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quizapp-ingress
  annotations:
    # kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: wildcard-cert  # ✅ This line is key
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: www.neotechwave.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quizapp-service
                port:
                  number: 80
