k8s/base/test-api-ingress23.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-api-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  # ingressClassName: azure-application-gateway
  rules:
  - host: echo.neotechwave.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-api-service
            port:
              number: 80
