k8s/base/www-root-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-root-ingress
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: www.neotechwave.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-service   # Or whichever app to show
                port:
                  number: 80
